--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <meta charset="utf-8" />
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 
-<link rel="stylesheet" href="https://data.irozhlas.cz/korona-qa/style.css" />
+<link rel="stylesheet" href="./style.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.min.js"></script>
 
 <div id="corona_qa_resp"></div>
 
-<script src="https://data.irozhlas.cz/korona-qa/script.js"></script>
+<script src="./script.js"></script>
